--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
     var wizardSpeed = 3;
     var wizardWidth = 70;
     var getWizardHeight = function () { return wizardWidth * 1.337 };
-    var getWizardX = function (width) { return width / 2 };
-    var getWizardY = function (height) { return height * 2 / 3 };
+    var getWizardX = function (width) { return width / 2 - wizardWidth / 2 };
+    var getWizardY = function (height) { return height * 1 / 3 - getWizardHeight() };
   </script>
   <script src="js/game.js"></script>
 
