--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
     var getWizardX = function (width) { return width / 2 - wizardWidth / 2 };
     var getWizardY = function (height) { return height * 1 / 3 - getWizardHeight() };
   </script>
+  <script src="js/stat.js"></script>
   <script src="js/game.js"></script>
 
 </body>
