--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
     };
     var wizardSpeed = 3;
     var wizardWidth = 70;
-    var getWizardHeight = function () { return wizardWidth * 1.337 };
-    var getWizardX = function (width) { return width / 2 - wizardWidth / 2 };
-    var getWizardY = function (height) { return height * 1 / 3 - getWizardHeight() };
+    var getWizardHeight = function () { return wizardWidth * 1.337; };
+    var getWizardX = function (width) { return (width - wizardWidth) / 2; };
+    var getWizardY = function (height) { return height * 1 / 3 - getWizardHeight(); };
   </script>
   <script src="js/stat.js"></script>
   <script src="js/game.js"></script>
