--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="demo"></div>
 
     <div class="setup-open">
-      <img src="./img/user-1.jpg" class="setup-open-icon">
+      <img src="./img/user-1.jpg" tabindex="0" class="setup-open-icon">
     </div>
   </header>
 
@@ -81,7 +81,7 @@
           </label>
         </div>
 
-        <span class="setup-close">&times;</span>
+        <span class="setup-close" tabindex="0">&times;</span>
       </div>
 
 
