--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           </div>
         </div>
 
-        <button class="button setup-submit">Сохранить</button>
+        <button type="submit" class="button setup-submit">Сохранить</button>
       </div>
     </form>
   </div>
