--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
     var getWizardX = function (width) { return (width - wizardWidth) / 2; };
     var getWizardY = function (height) { return height * 1 / 3 - getWizardHeight(); };
   </script>
+  <script src="js/utils.js"></script>
+  <script src="js/appearance.js"></script>
+  <script src="js/wizards.js"></script>
   <script src="js/setup.js"></script>
   <script src="js/stat.js"></script>
   <script src="js/game.js"></script>
