--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
     var getWizardY = function (height) { return height * 1 / 3 - getWizardHeight(); };
   </script>
   <script src="js/utils.js"></script>
+  <script src="js/backend.js"></script>
   <script src="js/setup.js"></script>
   <script src="js/dialog.js"></script>
   <script src="js/wizards.js"></script>
