--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
     var getWizardY = function (height) { return height * 1 / 3 - getWizardHeight(); };
   </script>
   <script src="js/utils.js"></script>
-  <script src="js/message.js"></script>
-  <script src="js/backend.js"></script>
   <script src="js/setup.js"></script>
+  <script src="js/backend.js"></script>
   <script src="js/dialog.js"></script>
+  <script src="js/render.js"></script>
   <script src="js/wizards.js"></script>
   <script src="js/stat.js"></script>
   <script src="js/game.js"></script>
